testsuite/poke.pkl/lambda-diag-1.pk
/* { dg-do compile } */

lambda (int i, string s) void: {} (10, 20); /* { dg-error ".*\n.*expected string" } */
